--- a/content/publication/Conference/iMIRACLE-an-Iterative-Multi-View-Graph-Neural-Network-to-Model-Intercellular-Gene-Regulation-from-Spatial-Transcriptomic-Data/cite.bib
+++ b/content/publication/Conference/iMIRACLE-an-Iterative-Multi-View-Graph-Neural-Network-to-Model-Intercellular-Gene-Regulation-from-Spatial-Transcriptomic-Data/cite.bib
@@ -1,9 +1,17 @@
-@inproceedings{duan2024iMIRACLE,
-  title={iMIRACLE: an Iterative Multi-View Graph Neural Network to Model Intercellular Gene Regulation from Spatial Transcriptomic Data},
-  author={Duan, Ziheng and Siwei, Xu and Cheyu, Lee and Dylan, Riffle and Jing, Zhang},
-  booktitle={The 33rd ACM International Conference on Information and Knowledge Management},
-  % volume={0},
-  % number={0},
-  % pages={0--0},
-  year={2024}
+@inproceedings{10.1145/3627673.3679574,
+author = {Duan, Ziheng and Xu, Siwei and Lee, Cheyu and Riffle, Dylan and Zhang, Jing},
+title = {iMIRACLE: An Iterative Multi-View Graph Neural Network to Model Intercellular Gene Regulation From Spatial Transcriptomic Data},
+year = {2024},
+isbn = {9798400704369},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3627673.3679574},
+doi = {10.1145/3627673.3679574},
+abstract = {Spatial transcriptomics has transformed genomic research by measuring spatially resolved gene expressions, allowing us to investigate how cells adapt to their microenvironment via modulating their expressed genes. This essential process usually starts from cell-cell communication (CCC) via ligand-receptor (LR) interaction, leading to regulatory changes within the receiver cell. However, few methods were developed to connect them to provide biological insights into intercellular regulation. To fill this gap, we propose iMiracle, an iterative multi-view graph neural network that models each cell's intercellular regulation with three key features. Firstly, iMiracle integrates inter- and intra-cellular networks to jointly estimate cell-type- and micro-environment-driven gene expressions. Optionally, it allows prior knowledge of intra-cellular networks as pre-structured masks to maintain biological relevance. Secondly, iMiracle employs iterative learning to overcome the sparsity of spatial transcriptomic data and gradually fill in the missing edges in the CCC network. Thirdly, iMiracle infers a cell-specific ligand-gene regulatory score based on the contributions of different LR pairs to interpret inter-cellular regulation. We applied iMiracle to nine simulated and eight real datasets from three sequencing platforms and demonstrated that iMiracle consistently outperformed ten methods in gene expression imputation and four methods in regulatory score inference. Lastly, we developed iMiracle as an open-source software and anticipate that it can be a powerful tool in decoding the complexities of inter-cellular transcriptional regulation.},
+booktitle = {Proceedings of the 33rd ACM International Conference on Information and Knowledge Management},
+pages = {538–548},
+numpages = {11},
+keywords = {cell-cell communications, graph neural networks, inter-cellular gene regulation, spatial transcriptomics},
+location = {Boise, ID, USA},
+series = {CIKM '24}
 }
